# tohaya

./: Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml  flake.nix  justfile
.github/workflows/: crates_io.yml  release.yml  web.yml
src/: error.rs  guess.rs  lib.rs  main.rs  path_arg.rs  pubmed.rs
web/: index.html  style.css
