[package]
name = "tohaya"
description = "Convert citation file formats to hayagriva YAML"
version = "0.0.1"
edition = "2024"
repository = "https://github.com/FNNDSC/tohaya"
homepage = "https://github.com/FNNDSC/tohaya"
license = "MIT OR Apache-2.0"
keywords = ["bibliography", "citation", "pubmed", "hayagriva"]
categories = ["science", "command-line-utilities"]

[dependencies]
biblib = { default-features = false, features = ["pubmed"], git = "https://github.com/AliAzlanDev/biblib.git", rev = "refs/pull/7/head" }
color-eyre = "0.6.5"
hayagriva = { version = "0.8.1", default-features = false, features = ["biblatex"] }
serde_yaml = "0.9.34"
thiserror = "2.0.12"
unic-langid-impl = "0.9.6"
url = "2.5.4"
clap = { version = "4.5.40", features = ["derive"] }
fs-err = "3.1.1"
itertools = "0.14.0"
regex-lite = "0.1.6"
wasm-bindgen = "0.2.100"

# TODO remove me when nanoid dependency is removed from biblib
# https://github.com/AliAzlanDev/biblib/issues/8#issuecomment-2989887197
getrandom = { version = "0.2.16", features = ["js"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[profile.release]
strip = true

[lib]
crate-type = ["cdylib", "rlib"]

[target.wasm32-unknown-unknown]
rustflags = ['--cfg', 'getrandom_backend="wasm_js"']

[package.metadata.wasm-pack.profile.release]
# TODO enable wasm-opt and fix error about --enable-bulk-memory
wasm-opt = false
